syntax = "proto3";

package spine.test.type;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.type";
option java_outer_classname = "GreetingServiceProto";
option java_multiple_files = true;

service GreetingService {

    rpc Hello (Greeting) returns (Greeting);
}

message Greeting {

    string value = 1;
}
